--- a/index.html
+++ b/index.html
@@ -31,11 +31,16 @@
     <p>Söker du en entusiastisk fullstack-utvecklare med problemlösningsfokus och önskan att bidra till framgångsrika projekt?</p>
     <button class="banner_button">Kontakta mig!</button>
  </div>
-   
+ <div class="arrow-container">
+    <a href="#section-about-me" class="arrow"> <img src="/img/arrow.png" alt="me" width="80px"></a>
+</div>
  </section>
+
+
 
 <!-- OM MIG SECTION-->
  <section class="section-om-mig">
+    <a id="section-about-me"></a>
     <h2>Om mig</h2>
     <div class="container-om-mig">
         <img class="img-about-me" src="/img/om-mig.jpg" alt="" width="300px">
@@ -60,13 +65,13 @@
     <div class="skills">
        <h2>Skills</h2>
      <div class="skills-logos">
-       <div class="logo-item"><img class="logos-img" src="/img/html-5.png" alt="fotos relevantes skills" width="70px"></div>
-        <div class="logo-item"><img class="logos-img" src="/img/csslogo.png" alt="fotos relevantes skills" width="70px"></div>
-        <div class="logo-item"><img class="logos-img" src="/img/js.png" alt="fotos relevantes skills" width="70px"></div>
-        <div class="logo-item"><img class="logos-img" src="/img/sql-server.png" alt="fotos relevantes skills" width="70px"></div>
-        <div class="logo-item"><img class="logos-img" src="/img/react.png" alt="fotos relevantes skills" width="70px"></div>
-        <div class="logo-item"><img class="logos-img" src="/img/git.png" alt="fotos relevantes skills" width="70px"></div>
-        <div class="logo-item"><img class="logos-img" src="/img/github.png" alt="fotos relevantes skills" width="70px"></div>
+       <div class="logo-item"><img class="logos-img" src="/img/html-5.png" alt="fotos relevantes skills" width="60px"></div>
+        <div class="logo-item"><img class="logos-img" src="/img/csslogo.png" alt="fotos relevantes skills" width="60px"></div>
+        <div class="logo-item"><img class="logos-img" src="/img/js.png" alt="fotos relevantes skills" width="60px"></div>
+        <div class="logo-item"><img class="logos-img" src="/img/sql-server.png" alt="fotos relevantes skills" width="60px"></div>
+        <div class="logo-item"><img class="logos-img" src="/img/react.png" alt="fotos relevantes skills" width="60px"></div>
+        <div class="logo-item"><img class="logos-img" src="/img/git.png" alt="fotos relevantes skills" width="60px"></div>
+        <div class="logo-item"><img class="logos-img" src="/img/github.png" alt="fotos relevantes skills" width="60px"></div>
      </div>
     </div>
  </section>
