last section done

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
  </section>
 
-<!-- Seccion 3 -->
+<!-- Section 3 -->
  <section class="section-skills">
     <div class="skills">
        <h2>Skills</h2>
@@ -81,27 +81,29 @@
 <!-- Sista section -->
  <section class="last-section">
     <div>
-        <div>
-            <img src="/img/logo.png" alt="Logo">
+        <div class="logo-contact-container">
+            <img src="/img/logo.png" alt="Logo" width="300px">
         </div>
     </div>
-    <div>
+    <div class="social-media-container">
         <div>
-            <h2>Contacts</h2>
-        </div>
-        <div>
-            <a href="">Email</a>
-            <a href="/">Linkedin</a>
-            <a href="">Github</a>
+            <a href="">
+               <img class="social-logos" src="img/correo-electronico.png" alt="">
+            </a>
+            <a href="">
+               <img class="social-logos" src="img/linkedin.png" alt="">
+            </a>
+            <a href="">
+               <img class="social-logos" src="img/github.contact.png " alt="">
+             </a>
         </div>
     </div>
-
-    <!-- Footer -->
-    <footer>
+</section>
+   </main>
+   
+   <!-- Footer -->
+ <footer>
      <div>Trinidad Ubilla 2024 | <p> © All rights reserved</p></div>
     </footer>
- </section>
-   </main>
-    
 </body>
 </html>
