organisation and skills css

--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
 <!-- OM MIG SECTION-->
  <section class="section-om-mig">
     <a id="section-about-me"></a>
-    <h2>Om mig</h2>
     <div class="container-om-mig">
         <img class="img-about-me" src="/img/om-mig.jpg" alt="" width="300px">
         <div class="textos-om-mig">
@@ -65,15 +64,27 @@
     <div class="skills">
        <h2>Skills</h2>
      <div class="skills-logos">
-       <div class="logo-item"><img class="logos-img" src="/img/html-5.png" alt="fotos relevantes skills" width="60px"></div>
-        <div class="logo-item"><img class="logos-img" src="/img/csslogo.png" alt="fotos relevantes skills" width="60px"></div>
-        <div class="logo-item"><img class="logos-img" src="/img/js.png" alt="fotos relevantes skills" width="60px"></div>
-        <div class="logo-item"><img class="logos-img" src="/img/sql-server.png" alt="fotos relevantes skills" width="60px"></div>
-        <div class="logo-item"><img class="logos-img" src="/img/react.png" alt="fotos relevantes skills" width="60px"></div>
-        <div class="logo-item"><img class="logos-img" src="/img/git.png" alt="fotos relevantes skills" width="60px"></div>
-        <div class="logo-item"><img class="logos-img" src="/img/github.png" alt="fotos relevantes skills" width="60px"></div>
+       <div class="logo-item"><img class="logos-img" src="/img/logos/html-5.png" alt="fotos relevantes skills" width="60px"></div>
+        <div class="logo-item"><img class="logos-img" src="/img/logos/csslogo.png" alt="fotos relevantes skills" width="60px"></div>
+        <div class="logo-item"><img class="logos-img" src="/img/logos/js.png" alt="fotos relevantes skills" width="60px"></div>
+        <div class="logo-item"><img class="logos-img" src="/img/logos/sql-server.png" alt="fotos relevantes skills" width="60px"></div>
+        <div class="logo-item"><img class="logos-img" src="/img/logos/react.png" alt="fotos relevantes skills" width="60px"></div>
+        <div class="logo-item"><img class="logos-img" src="/img/logos/git.png" alt="fotos relevantes skills" width="60px"></div>
+        <div class="logo-item"><img class="logos-img" src="/img/logos/github.png" alt="fotos relevantes skills" width="60px"></div>
      </div>
     </div>
+    <div class="skills">
+        <h2>Skills</h2>
+      <div class="skills-logos">
+        <div class="logo-item"><img class="logos-img" src="/img/logos/html-5.png" alt="fotos relevantes skills" width="60px"></div>
+         <div class="logo-item"><img class="logos-img" src="/img/logos/csslogo.png" alt="fotos relevantes skills" width="60px"></div>
+         <div class="logo-item"><img class="logos-img" src="/img/logos/js.png" alt="fotos relevantes skills" width="60px"></div>
+         <div class="logo-item"><img class="logos-img" src="/img/logos/sql-server.png" alt="fotos relevantes skills" width="60px"></div>
+         <div class="logo-item"><img class="logos-img" src="/img/logos/react.png" alt="fotos relevantes skills" width="60px"></div>
+         <div class="logo-item"><img class="logos-img" src="/img/logos/git.png" alt="fotos relevantes skills" width="60px"></div>
+         <div class="logo-item"><img class="logos-img" src="/img/logos/github.png" alt="fotos relevantes skills" width="60px"></div>
+      </div>
+     </div>
  </section>
 
 
@@ -88,13 +99,13 @@
     <div class="social-media-container">
         <div>
             <a href="">
-               <img class="social-logos" src="img/correo-electronico.png" alt="">
+               <img class="social-logos" src="img/social/email.png" alt="">
             </a>
             <a href="">
-               <img class="social-logos" src="img/linkedin.png" alt="">
+               <img class="social-logos" src="img/social/linkedin.png" alt="">
             </a>
             <a href="">
-               <img class="social-logos" src="img/github.contact.png " alt="">
+               <img class="social-logos" src="img/social/github.contact.png" alt="">
              </a>
         </div>
     </div>
