la till project delen

--- a/index.html
+++ b/index.html
@@ -73,16 +73,11 @@
         <div class="logo-item"><img class="logos-img" src="/img/logos/github.png" alt="fotos relevantes skills" width="60px"></div>
      </div>
     </div>
-    <div class="skills">
-        <h2>Skills</h2>
-      <div class="skills-logos">
-        <div class="logo-item"><img class="logos-img" src="/img/logos/html-5.png" alt="fotos relevantes skills" width="60px"></div>
-         <div class="logo-item"><img class="logos-img" src="/img/logos/csslogo.png" alt="fotos relevantes skills" width="60px"></div>
-         <div class="logo-item"><img class="logos-img" src="/img/logos/js.png" alt="fotos relevantes skills" width="60px"></div>
-         <div class="logo-item"><img class="logos-img" src="/img/logos/sql-server.png" alt="fotos relevantes skills" width="60px"></div>
-         <div class="logo-item"><img class="logos-img" src="/img/logos/react.png" alt="fotos relevantes skills" width="60px"></div>
-         <div class="logo-item"><img class="logos-img" src="/img/logos/git.png" alt="fotos relevantes skills" width="60px"></div>
-         <div class="logo-item"><img class="logos-img" src="/img/logos/github.png" alt="fotos relevantes skills" width="60px"></div>
+    <div class="projects-container">
+        <h2>Projects</h2>
+      <div class="projects-items">
+        <div><img class="project-item" src="/img/projects/webbsite-cleander.png" alt="fotos relevantes skills" width="300px"></div>
+         <div><img class="project-item" src="/img/projects/website-madde.png" alt="fotos relevantes skills" width="300px"></div>
       </div>
      </div>
  </section>
