done forr today with projects

--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
         <h2>Projects</h2>
       <div class="projects-items">
         <div><img class="project-item" src="/img/projects/webbsite-cleander.png" alt="fotos relevantes skills" width="300px"></div>
+        <div><img class="project-item" src="/img/projects/webbsite-kontakt.png" alt="fotos relevantes skills" width="300px"></div>
          <div><img class="project-item" src="/img/projects/website-madde.png" alt="fotos relevantes skills" width="300px"></div>
+         <div><img class="project-item" src="/img/projects/project-maddescontact.png" alt="fotos relevantes skills" width="300px"></div>
       </div>
      </div>
  </section>
