--- a/index.html
+++ b/index.html
@@ -28,12 +28,9 @@
  <section class="banner">
     <div class="banner_text">
     <h1>Välkommen till min portfölj!</h1>
-    <p>Söker du en entusiastisk fullstack-utvecklare med problemlösningsfokus och önskan att bidra till framgångsrika projekt?</p>
-    <button class="banner_button">Kontakta mig!</button>
+    <p>Söker du en entusiastisk fullstack-utvecklare med problemlösningsfokus och önskan att bidra till framgångsrika projekt?</p>  
  </div>
- <div class="arrow-container">
-    <a href="#section-about-me" class="arrow"> <img src="/img/arrow.png" alt="me" width="80px"></a>
-</div>
+ <button class="banner_button">Ladda ner CV!</button>
  </section>
 
 
@@ -95,14 +92,14 @@
     </div>
     <div class="social-media-container">
         <div>
-            <a href="">
+            <a href="mailto:triubilla@gmail.com" target="_blank">
                <img class="social-logos" src="img/social/email.png" alt="">
             </a>
-            <a href="">
+            <a href="https://www.linkedin.com/in/%E2%9A%A1%EF%B8%8Ftrinidad-ubilla-46924429a/" target="_blank">
                <img class="social-logos" src="img/social/linkedin.png" alt="">
             </a>
-            <a href="">
-               <img class="social-logos" src="img/social/github.contact.png" alt="">
+            <a href="https://github.com/TriUbi" target="_blank">
+               <img class="social-logos" src="img/social/github.contact.png" alt="" >
              </a>
         </div>
     </div>
