--- a/index.html
+++ b/index.html
@@ -27,10 +27,14 @@
    <!-- Banner  -->
  <section class="banner">
     <div class="banner_text">
-    <h1>Välkommen till min portfölj!</h1>
-    <p>Söker du en entusiastisk fullstack-utvecklare med problemlösningsfokus och önskan att bidra till framgångsrika projekt?</p>  
+    <h1>Trinidad Ubilla.</h1>
+    <h3>Fullstack Utvecklare</h3>
+    <p>Söker du en entusiastisk fullstack-utvecklare med problemlösningsfokus och önskan att bidra till framgångsrika projekt?</p>
  </div>
+ <div class="btn-banner-container">
+ <button class="banner_button">Kontakta mig!</button>
  <button class="banner_button">Ladda ner CV!</button>
+</div>
  </section>
 
 
