--- a/index.html
+++ b/index.html
@@ -46,73 +46,88 @@
         <img class="img-about-me" src="/img/om-mig.jpg" alt="" width="300px">
         <div class="textos-om-mig">
             <div class="about-text">
-            <h3><span>1</span>Frontend</h3>
-            <p>I'm a front-end developer with experience in building responsive and optimized sites </p>
+            <h3>Frontend</h3>
+            <p>Skapa snygga, användarvänliga webbsidor med fokus på imponerande och tillgängliga digitala upplevelser.</p>
             </div>
-            <div class="about-text"><h3><span>2</span>Backend</h3>
-            <p>I have experience developing fast and
-                optimised back-end systems and APIs </p>
+            <div class="about-text">
+                <h3>Backend</h3>
+            <p>Fokus på att utveckla snabba och optimerade back-end system samt API:er </p>
             </div>
-            <div class="about-text"><h3><span>3</span>SEO </h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+            <div class="about-text">
+                <h3>SEO</h3>
+            <p>Ökar synlighet, optimerar innehåll för ökad trafik och resultat </p>
         </div>
     </div>
+    </div>
+ </section>
+
+ <section class="middle-section">
+    <div>
     </div>
  </section>
 
 <!-- Section 3 -->
  <section class="section-skills">
     <div class="skills">
-       <h2>Skills</h2>
+       <h3>Kompetenser</h3>
      <div class="skills-logos">
-       <div class="logo-item"><img class="logos-img" src="/img/logos/html-5.png" alt="fotos relevantes skills" width="60px"></div>
-        <div class="logo-item"><img class="logos-img" src="/img/logos/csslogo.png" alt="fotos relevantes skills" width="60px"></div>
-        <div class="logo-item"><img class="logos-img" src="/img/logos/js.png" alt="fotos relevantes skills" width="60px"></div>
-        <div class="logo-item"><img class="logos-img" src="/img/logos/sql-server.png" alt="fotos relevantes skills" width="60px"></div>
-        <div class="logo-item"><img class="logos-img" src="/img/logos/react.png" alt="fotos relevantes skills" width="60px"></div>
-        <div class="logo-item"><img class="logos-img" src="/img/logos/git.png" alt="fotos relevantes skills" width="60px"></div>
-        <div class="logo-item"><img class="logos-img" src="/img/logos/github.png" alt="fotos relevantes skills" width="60px"></div>
+       <div class="logo-item">
+        <img class="logos-img" src="/img/logos/html-5.png" alt="fotos relevantes skills" width="60px"></div>
+        <div class="logo-item">
+            <img class="logos-img" src="/img/logos/csslogo.png" alt="fotos relevantes skills" width="60px"></div>
+        <div class="logo-item">
+            <img class="logos-img" src="/img/logos/js.png" alt="fotos relevantes skills" width="60px"></div>
+        <div class="logo-item">
+            <img class="logos-img" src="/img/logos/sql-server.png" alt="fotos relevantes skills" width="60px"></div>
+        <div class="logo-item">
+            <img class="logos-img" src="/img/logos/react.png" alt="fotos relevantes skills" width="60px"></div>
+        <div class="logo-item">
+            <img class="logos-img" src="/img/logos/git.png" alt="fotos relevantes skills" width="60px"></div>
+        <div class="logo-item">
+            <img class="logos-img" src="/img/logos/github.png" alt="fotos relevantes skills" width="60px"></div>
+         <div class="logo-item">
+                <img class="logos-img" src="/img/logos/wordpresslogo.png" alt="fotos relevantes skills" width="60px"></div>
+        <div class="logo-item">
+            <img class="logos-img" src="/img/logos/php.png" alt="fotos relevantes skills" width="75px"></div>
+        <div class="logo-item">
+                <img class="logos-img" src="/img/logos/nodejs.png" alt="fotos relevantes skills" width="70px"></div>
      </div>
+     </section>
     </div>
-    <div class="projects-container">
-        <h2>Projects</h2>
-      <div class="projects-items">
-        <div><img class="project-item" src="/img/projects/webbsite-cleander.png" alt="fotos relevantes skills" width="300px"></div>
-        <div><img class="project-item" src="/img/projects/webbsite-kontakt.png" alt="fotos relevantes skills" width="300px"></div>
-         <div><img class="project-item" src="/img/projects/website-madde.png" alt="fotos relevantes skills" width="300px"></div>
-         <div><img class="project-item" src="/img/projects/project-maddescontact.png" alt="fotos relevantes skills" width="300px"></div>
-      </div>
-     </div>
- </section>
+
 
 
  
 <!-- Sista section -->
  <section class="last-section">
-    <div>
-        <div class="logo-contact-container">
-            <img src="/img/logo.png" alt="Logo" width="300px">
-        </div>
-    </div>
-    <div class="social-media-container">
-        <div>
-            <a href="mailto:triubilla@gmail.com" target="_blank">
-               <img class="social-logos" src="img/social/email.png" alt="">
-            </a>
-            <a href="https://www.linkedin.com/in/%E2%9A%A1%EF%B8%8Ftrinidad-ubilla-46924429a/" target="_blank">
-               <img class="social-logos" src="img/social/linkedin.png" alt="">
-            </a>
-            <a href="https://github.com/TriUbi" target="_blank">
-               <img class="social-logos" src="img/social/github.contact.png" alt="" >
-             </a>
-        </div>
-    </div>
 </section>
    </main>
    
    <!-- Footer -->
  <footer>
-     <div>Trinidad Ubilla 2024 | <p> © All rights reserved</p></div>
+    <div class="footer-content">
+        <div>
+            <div class="logo-contact-container">
+                <img src="/img/logo.png" alt="Logo" width="300px">
+            </div>
+        </div>
+        <div class="social-media-container">
+            <h3>Social</h3>
+            <div>
+                <a href="mailto:triubilla@gmail.com" target="_blank">
+                   <img class="social-logos" src="img/social/email.png" alt="">
+                </a>
+                <a href="https://www.linkedin.com/in/%E2%9A%A1%EF%B8%8Ftrinidad-ubilla-46924429a/" target="_blank">
+                   <img class="social-logos" src="img/social/linkedin.png" alt="">
+                </a>
+                <a href="https://github.com/TriUbi" target="_blank">
+                   <img class="social-logos" src="img/social/github.contact.png" alt="" >
+                 </a>
+            </div>
+        </div>
+        </div>
+     <div class="rights-container">
+        <p>Trinidad Ubilla 2024 | © All rights reserved</p></div>
     </footer>
 </body>
 </html>
