created contact page

--- a/index.html
+++ b/index.html
@@ -6,24 +6,23 @@
     <link rel="stylesheet" href="styles.css">
     <title>Portfolio </title>
 </head>
-<body>
-   <main class="main">
-   <header class="header">
+<body> 
+    <header class="header">
     <div class="header_logo">
     <a class="header_link" href="/">
         <img class="header_img" src="/img/logo.png" alt="namn logo som img" width="150px">
     </a>
 </div>
     <div class="div_navi">
-     <nav class="navi">
+     <nav>
                 <a href="/">Home</a>
                 <a href="projects.html">Projects</a>
                 <a href="contact.html">Contact</a>
         </nav>
     </div>
 </header>
-       
 
+   <main class="main">
    <!-- Banner  -->
  <section class="banner">
     <div class="banner_text">
@@ -61,14 +60,9 @@
     </div>
  </section>
 
- <section class="middle-section">
-    <div>
-    </div>
- </section>
-
 <!-- Section 3 -->
  <section class="section-skills">
-    <div class="skills">
+    <div>
        <h3>Kompetenser</h3>
      <div class="skills-logos">
        <div class="logo-item">
@@ -106,17 +100,12 @@
    <!-- Footer -->
  <footer>
     <div class="footer-content">
-        <div>
-            <div class="logo-contact-container">
-                <img src="/img/logo.png" alt="Logo" width="300px">
-            </div>
-        </div>
         <div class="social-media-container">
-            <h3>Social</h3>
+           <a href="contact.html"><h3>Kontakt &#128072; </h3></a>
             <div>
                 <a href="mailto:triubilla@gmail.com" target="_blank">
                    <img class="social-logos" src="img/social/email.png" alt="">
-                </a>
+                </a> 
                 <a href="https://www.linkedin.com/in/%E2%9A%A1%EF%B8%8Ftrinidad-ubilla-46924429a/" target="_blank">
                    <img class="social-logos" src="img/social/linkedin.png" alt="">
                 </a>
