--- a/contact.html
+++ b/contact.html
@@ -28,19 +28,12 @@
  <section class="form-section">
     <div>
         <h2>Kontakta mig genom att fylla i formuläret nedan!</h2>
-        <div class="form-container"> <form>
-            <div class="form-group">
-                <input type="text" placeholder="Företag*" required>
-            </div>
-            <div class="form-group">
-                <input type="text" placeholder="Namn*" required>
-            </div>
-            <div class="form-group">
-                <input type="text" placeholder="E-mail*" required>
-            </div>
-            <div class="form-group">
+        <div class="form-container">
+            <form method="post" action="https://formsubmit.co/triubilla@gmail.com">
+                <input type="text" name="foretag" placeholder="Företag*" required>
+                <input type="text" name="namn" placeholder="Namn*" required>
+                <input type="text" name="email" placeholder="E-mail*" required>
                 <textarea name="meddelande" id="meddelande" cols="30" rows="6" placeholder="Meddelande*"></textarea>
-            </div>
 
             <button type="submit">Skicka</button>
 
