la till ny bild om mig

--- a/contact.html
+++ b/contact.html
@@ -30,16 +30,17 @@
         <h2>Kontakta mig genom att fylla i formuläret nedan!</h2>
         <div class="form-container">
             <form method="post" action="https://formsubmit.co/triubilla@gmail.com">
-                <input type="text" name="foretag" placeholder="Företag*" required>
-                <input type="text" name="namn" placeholder="Namn*" required>
-                <input type="text" name="email" placeholder="E-mail*" required>
-                <textarea name="meddelande" id="meddelande" cols="30" rows="6" placeholder="Meddelande*"></textarea>
+                <input type="text" name="Företag" placeholder="Företag*" required>
+                <input type="text" name="Namn" placeholder="Namn*" required>
+                <input type="text" name="Email" placeholder="E-mail*" required>
+                <textarea name="Meddelande" id="meddelande" cols="30" rows="6" placeholder="Meddelande*"></textarea>
 
             <button type="submit">Skicka</button>
-
         </form>
     </div>
-       
+    <div class="img-form">
+        <img src="" alt="">
+    </div>
     </div>
     
  </section>
