--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
  <section class="section-om-mig">
     <a id="section-about-me"></a>
     <div class="container-om-mig">
-        <img class="img-about-me" src="/img/om-mig.jpg" alt="" width="300px">
+        <img class="img-about-me" src="/img/om-mig.png" alt="" width="400px">
         <div class="textos-om-mig">
             <div class="about-text">
             <h3>Frontend</h3>
