--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,9 @@
                 <input type="text" name="Namn" placeholder="Namn*" required>
                 <input type="text" name="Email" placeholder="E-mail*" required>
                 <textarea name="Meddelande" id="meddelande" cols="30" rows="6" placeholder="Meddelande*"></textarea>
+                <input type="hidden" name="_captcha" value="false">
 
-            <button type="submit">Skicka</button>
+            <button type="submit" target="_blank">Skicka</button>
         </form>
     </div>
     <div class="img-form">
