--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="projects.css">
     <title>My projects </title>
 </head>
 <body>
@@ -27,10 +28,15 @@
 
    <!-- Banner  -->
  <section class="banner">
-    <div class="banner_text">
+    <div class="projects-container">
     <h1>Välkommen till min portfölj!</h1>
-    <p>Söker du en entusiastisk fullstack-utvecklare med problemlösningsfokus och önskan att bidra till framgångsrika projekt?</p>
-    <button class="banner_button">Kontakta mig!</button>
+    <div>
+        <img src="img/projects/website-madde.png" alt="" width="400px">
+    </div>
+    <div>
+        <img src="img/projects/webbsite-cleander.png" alt="" width="400px">
+    </div>
+    
  </div>
    
  </section>
