--- a/contact.html
+++ b/contact.html
@@ -39,10 +39,29 @@
             <button type="submit" target="_blank">Skicka</button>
         </form>
     </div>
-    <div class="img-form">
-        <img src="" alt="">
     </div>
-    </div>
-    
  </section>
 </main> 
+
+ <!-- Footer -->
+ <footer>
+    <div class="footer-content">
+        <div class="social-media-container">
+           <a href="contact.html"><h3>Kontakt &#128072; </h3></a>
+            <div>
+                <a href="mailto:triubilla@gmail.com" target="_blank">
+                   <img class="social-logos" src="img/social/email.png" alt="">
+                </a> 
+                <a href="https://www.linkedin.com/in/%E2%9A%A1%EF%B8%8Ftrinidad-ubilla-46924429a/" target="_blank">
+                   <img class="social-logos" src="img/social/linkedin.png" alt="">
+                </a>
+                <a href="https://github.com/TriUbi" target="_blank">
+                   <img class="social-logos" src="img/social/github.contact.png" alt="" >
+                 </a>
+            </div>
+        </div>
+        </div>
+     <div class="rights-container">
+        <p>Trinidad Ubilla 2024 | © All rights reserved</p></div>
+    </footer>
+</body>
