--- a/projects.html
+++ b/projects.html
@@ -23,20 +23,8 @@
         </nav>
     </div>
 </header>
-       
-   
- <section class="projects-gallery-section">
-    <div class="projects-container"> 
-        <div><img src="/img/projects/webbsite-cleander.png" alt=""></div>
-        <div><img src="/img/projects/webbsite-cleander.png" alt=""></div>
-        <div><img src="/img/projects/webbsite-cleander.png" alt=""></div>
-        <div><img src="/img/projects/webbsite-cleander.png" alt=""></div>
-        <div><img src="/img/projects/webbsite-cleander.png" alt=""></div>
-        <div><img src="/img/projects/webbsite-cleander.png" alt=""></div>
-        <div><img src="/img/projects/webbsite-cleander.png" alt=""></div>
-        <div><img src="/img/projects/webbsite-cleander.png" alt=""></div>
-    </div>
- </section>
+</main>
+
 
     <!-- Footer -->
     <footer>
@@ -59,3 +47,5 @@
          <div class="rights-container">
             <p>Trinidad Ubilla 2024 | © All rights reserved</p></div>
         </footer>
+    </body>
+    </html>
