--- a/projects.html
+++ b/projects.html
@@ -23,6 +23,40 @@
         </nav>
     </div>
 </header>
+
+<section class="projects-section">
+    <div class="cards">
+        <div class="card">
+            <img src="/img/projects/website-project.png" alt="">
+            <div class="content">
+                <h4>HTML CSS</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corporis ad, consequatur dolores architecto suscipit voluptatem impedit.</p>
+            </div>
+        </div>
+        <div class="card">
+             <img src="img/projects/contactlista-project.png" alt="">
+            <div class="content">
+                <h4>HTML CSS</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corporis ad, consequatur dolores architecto suscipit voluptatem impedit.</p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="/img/projects/api-project.png" alt="">
+            <div class="content">
+                <h4>HTML CSS</h4>
+               
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corporis ad, consequatur dolores architecto suscipit voluptatem impedit.</p>
+            </div>
+        </div>
+        <div class="card"> 
+            <img src="img/projects/react-project.png" alt="">
+            <div class="content">
+                <h4>HTML CSS</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corporis ad, consequatur dolores architecto suscipit voluptatem impedit.</p>
+            </div>
+        </div>
+    </div>
+</section>
 </main>
 
 
