la till docs och fixa lite buttons osv

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <p>Söker du en entusiastisk fullstack-utvecklare med problemlösningsfokus och önskan att bidra till framgångsrika projekt?</p>
  </div>
  <div class="btn-banner-container">
- <button class="banner_button">Kontakta mig!</button>
- <button class="banner_button">Ladda ner CV!</button>
+ <button class="btn-contact"> <a href="/contact.html">Kontakta mig!</a></button>
+ <button class="btn-download"><a href="/documents/CV -LIA.pdf" download="LIA-CV-Trinidad">Ladda ner CV!</a></button>
 </div>
  </section>
 
