--- a/projects.html
+++ b/projects.html
@@ -25,31 +25,67 @@
 </header>
 
 <section class="projects-section">
+    <h2>Skol Projekt</h2>
     <div class="cards">
         <div class="card">
             <img src="/img/projects/website-project.png" alt="">
             <div class="content">
-                <h4>HTML CSS</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corporis ad, consequatur dolores architecto suscipit voluptatem impedit.</p>
+                <h4>Hemsida (HTML & CSS)</h4>
+                <p>Använt HTML,  CSS grids, flexbox och media queries för att skapa en användarvänlig och välstrukturerad hemsida åt en fiktiv städfirma.</p>
             </div>
         </div>
         <div class="card">
              <img src="img/projects/contactlista-project.png" alt="">
             <div class="content">
-                <h4>HTML CSS</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corporis ad, consequatur dolores architecto suscipit voluptatem impedit.</p>
+                <h4>Kontaklista(JavaScript) </h4>
+                <p>Använt JavaScript funktionalitet för att skapa en Kontaklista med "spara", "radera listan", "redigera" samt "ta bort kontakt" knappar. </p>
             </div>
         </div>
         <div class="card">
             <img src="/img/projects/api-project.png" alt="">
             <div class="content">
-                <h4>HTML CSS</h4>
+                <h4>JavaScript & AJAX med JSON</h4>
+                <p>Skapat en app för att söka efter Tv-serier och göra olika anrop med hjälp av en API och JS för att presentera datan.</p>
+            </div>
+        </div>
+        <div class="card"> 
+            <img src="img/projects/react-project.png" alt="">
+            <div class="content">
+                <h4>REACT med TypeScript</h4>
+                <p>Skapat en "To-do" lista i REACT med TypeScript. Användare kan mäta in sina egna "to-do", kryssa i, redigera samt skapa ny lista från 0.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<section class="projects-section">
+    <h2>Personliga Projekt</h2>
+    <div class="cards">
+        <div class="card">
+            <img src="/img/projects/wordpress-cleander.png" alt="">
+            <div class="content">
+                <h4>WordPress</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corporis ad, consequatur dolores architecto suscipit voluptatem impedit.</p>
+            </div>
+        </div>
+        <div class="card">
+             <img src="img/projects/wordpress-kontakt.png" alt="">
+            <div class="content">
+                <h4>WordPress</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corporis ad, consequatur dolores architecto suscipit voluptatem impedit.</p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="/img/projects/website-madde.png" alt="">
+            <div class="content">
+                <h4>WordPress</h4>
                
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corporis ad, consequatur dolores architecto suscipit voluptatem impedit.</p>
             </div>
         </div>
         <div class="card"> 
-            <img src="img/projects/react-project.png" alt="">
+            <img src="img/projects/portfolio-project.png" alt="">
             <div class="content">
                 <h4>HTML CSS</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corporis ad, consequatur dolores architecto suscipit voluptatem impedit.</p>
