done with startsida

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
    <main class="main">
    <!-- Banner  -->
  <section class="banner">
+    <div class="overlay"></div>
     <div class="banner_text">
     <h1>Trinidad Ubilla.</h1>
     <h3>Fullstack Utvecklare</h3>
