--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src/assets/img/profile.png" />
+    <link rel="icon" type="image/png" href="./assets/profile-C8WZXAyr.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trinidad Ubilla Portfolio</title>
   </head>
